banned streamers fix

--- a/.gitignore
+++ b/.gitignore
@@ -132,7 +132,8 @@ dmypy.json
 
 client_secret.json
 client_twitch_oauth.py
-twitch_vod_m3u8.code-workspace
+*.code-workspace
+meme.py
 .vscode
 *.m3u8
 buffer.txt
