--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,7 @@ dmypy.json
 # End of https://www.gitignore.io/api/python
 
 client_secret.json
+settings.json
 client_twitch_oauth.py
 *.code-workspace
 meme.py
