improved gsheets speed

--- a/settings_example.json
+++ b/settings_example.json
@@ -1,6 +1,6 @@
 {
 	"client_id":"kimne78kx3ncx6brgo4mv6wki5h1ko",
-	"oauth_token":"",
+	"client_secret":"",
 	"list":[
 		{
 			"username" : "forsen",
